--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   http: ^1.2.1
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.0.2
+  flutter_facebook_auth: ^7.0.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
