--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,8 @@ dependencies:
   github_sign_in_plus: ^0.0.2
   flutter_web_auth: ^0.5.0
   flutter_dotenv: ^5.1.0
-  google_maps_flutter: ^2.0.6
-  geolocator: ^12.0.0
-  permission_handler: ^10.0.0
+  google_maps_flutter: ^2.6.1
+  location: ^5.0.3
 
 
 dependency_overrides:
